--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@supabase/supabase-js": "^1.23.0",
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.3"
+    "express-handlebars": "^5.3.3",
+    "sqlite": "^4.0.23",
+    "sqlite3": "^5.0.2"
   }
 }
